--- a/mushu/package.json
+++ b/mushu/package.json
@@ -16,7 +16,8 @@
     "README.md"
   ],
   "scripts": {
-    "dev": "npx http-server examples -p 8081 -c-1",
+    "dev": "npx http-server . -p 8081 -c-1 -o examples/index.html",
+    "start": "npx http-server . -p 8081 -c-1",
     "build": "echo 'No build step needed - pure ES modules'"
   },
   "keywords": [
