--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
 [build]
   publish = "."
   command = "echo 'No build step needed'"
+
+[[redirects]]
+  from = "/"
+  to = "/examples/index.html"
+  status = 200
+
+[[headers]]
+  for = "/src/*.js"
+  [headers.values]
+    Content-Type = "application/javascript"
