--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,20 @@
   "env": {
     "es2021": true,
     "node": true,
-    "browser": true,
-    "vitest-globals": true
+    "browser": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
+  },
+  "globals": {
+    "describe": "readonly",
+    "it": "readonly",
+    "expect": "readonly",
+    "GPUTextureUsage": "readonly",
+    "GPUBufferUsage": "readonly",
+    "GPUShaderStage": "readonly"
   },
   "rules": {
     "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
